--- a/CardGame/transition.css
+++ b/CardGame/transition.css
@@ -55,3 +55,13 @@
     /* 卡牌上升怼同时放大 */
     transform: translateX(-106px) translateY(-300px) scale(1.5);
 }
+/* 浮层动画 */
+.zoom-enter-active,
+.zoom-leave-active{
+  transition: opacity .3s, transform .3s;  
+}
+.zoom-enter,
+.zoom-leave-to{
+    opacity: 0;
+    transform: scale(.7);
+}
